fix: Fix scroll and gaps

--- a/style.css
+++ b/style.css
@@ -40,14 +40,16 @@ header {
   color: white;
   text-decoration: none;
   font-weight: bold;
+  cursor: pointer;
   transition: color 0.15s ease-out;
 }
 .menu__item a:hover {
   color: #ff1400;
 }
 .header__social {
-  gap: 20px;
+  gap: 10px;
 }
+
 .header__social-item {
   display: flex;
   width: 40px;
@@ -177,6 +179,7 @@ main section {
 .list__item a {
   display: inline-block;
   font-size: 20px;
+  color: black;
   text-decoration: none;
 }
 .list__item a:visited {
